<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Design Patterns</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="design_patterns_title">Design Patterns</string>
    
    <string name="hint_null">  </string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="server_name">Server:</string>
    <string name="save_password">Save Password</string>
    <string name="auto_login">Auto Login</string>
    <string name="cancel_title">Cancel</string>
    <string name="login_button_text">Login</string>

</resources>
